--- a/.github/workflows/e2e-test.yaml
+++ b/.github/workflows/e2e-test.yaml
@@ -42,8 +42,9 @@ jobs:
       - name: Install and run TiUP
         run: |
           curl --proto '=https' --tlsv1.2 -sSf https://tiup-mirrors.pingcap.com/install.sh | sh
-          ~/.tiup/bin/tiup update --nightly --all
-          ~/.tiup/bin/tiup playground nightly &
+          source /home/runner/.profile
+          tiup update --nightly --all
+          tiup playground nightly &
       - name: Build UI
         run: |
           make ui
