--- a/ui/package.json
+++ b/ui/package.json
@@ -41,9 +41,6 @@
     "bump:packages": "lerna version --no-git-tag-version --no-push"
   },
   "homepage": "/dashboard",
-  "eslintConfig": {
-    "extends": "react-app"
-  },
   "browserslist": {
     "production": [
       ">0.2%",
@@ -72,6 +69,8 @@
     "react-app-rewire-yaml": "^1.1.0",
     "react-app-rewired": "^2.1.5",
     "react-scripts": "3.1.x",
-    "typescript": "^3.7.4"
+    "typescript": "^3.7.4",
+    "webpack-bundle-analyzer": "^3.6.1",
+    "webpackbar": "^4.0.0"
   }
 }
