--- a/.github/workflows/pr-build.yaml
+++ b/.github/workflows/pr-build.yaml
@@ -65,6 +65,10 @@ jobs:
           key: ${{ runner.os }}-go-${{ hashFiles('**/go.sum') }}
           restore-keys: |
             ${{ runner.os }}-go-
+      - name: Check format
+        run: |
+          yarn prettier --check . || (echo "::error ::Please format your code using 'yarn format'"; exit 1)
+        working-directory: ui
       - name: Build UI
         run: |
           make ui
