--- a/.github/workflows/e2e-test.yaml
+++ b/.github/workflows/e2e-test.yaml
@@ -14,10 +14,10 @@ jobs:
         uses: actions/checkout@master
       - uses: actions/setup-node@v1
         with:
-          node-version: '12.x'
+          node-version: "12.x"
       - uses: actions/setup-go@v1
         with:
-          go-version: '1.13.5'
+          go-version: "1.13.5"
       - name: Lookup yarn cache
         id: yarn_cache
         run: echo "::set-output name=dir::$(yarn cache dir)"
@@ -48,27 +48,23 @@ jobs:
           key: ${{ runner.os }}-tiup
           restore-keys: |
             ${{ runner.os }}-tiup
-      - name: Install and run TiUP
+      - name: Install and run TiUP in background
         run: |
           curl --proto '=https' --tlsv1.2 -sSf https://tiup-mirrors.pingcap.com/install.sh | sh
           source /home/runner/.profile
           tiup update --nightly --all
           tiup playground nightly &
-      - name: Build UI
-        run: |
-          make ui
-        env:
-          NO_MINIMIZE: true
-      - name: Build and run backend
+      - name: Build and run backend in background
         run: |
           make
           make run &
-        env:
-          UI: 1
+      - name: Start frontend in background
+        run: |
+          cd ui
+          yarn
+          yarn start &
       - name: Run e2e test
         run: |
           cd ui/tests
           yarn
           yarn test
-        env:
-          CI: true
