--- a/.github/workflows/e2e-test.yaml
+++ b/.github/workflows/e2e-test.yaml
@@ -34,13 +34,6 @@ jobs:
           key: ${{ runner.os }}-go-${{ hashFiles('**/go.sum') }}
           restore-keys: |
             ${{ runner.os }}-go-
-      - name: Load golangci-lint cache
-        uses: actions/cache@v1
-        with:
-          path: ~/.cache/golangci-lint
-          key: ${{ runner.os }}-golint
-          restore-keys: |
-            ${{ runner.os }}-golint
       - name: Load tiup cache
         uses: actions/cache@v1
         with:
@@ -62,6 +55,7 @@ jobs:
         run: |
           cd ui
           yarn
+          yarn run build:packages
           yarn start &
       - name: Run e2e test
         run: |
