--- a/ui/packages/statement/package.json
+++ b/ui/packages/statement/package.json
@@ -28,7 +28,9 @@
     "lodash": "^4.17.15",
     "moment": "^2.24.0",
     "react-i18next": "^11.3.2",
-    "react-router-dom": "^5.1.2"
+    "react-router-dom": "^5.1.2",
+    "react-syntax-highlighter": "^12.2.1",
+    "sql-formatter": "^2.3.3"
   },
   "peerDependencies": {
     "react": "^16.12.0",
