--- a/ui/package.json
+++ b/ui/package.json
@@ -22,6 +22,7 @@
     "i18next-browser-languagedetector": "^4.0.1",
     "lodash": "^4.17.15",
     "moment": "^2.24.0",
+    "office-ui-fabric-react": "^7.105.3",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-i18next": "^11.3.2",
