--- a/ui/packages/diagnosis_report/package.json
+++ b/ui/packages/diagnosis_report/package.json
@@ -12,6 +12,7 @@
   },
   "scripts": {
     "watch": "echo no need",
+    "watch:build": "cra-build-watch",
     "start": "react-app-rewired start",
     "build": "react-app-rewired build",
     "clean": "rimraf dist"
@@ -31,6 +32,7 @@
   "devDependencies": {
     "@types/node": "^13.1.5",
     "@types/react": "^16.9.22",
+    "cra-build-watch": "^3.2.0",
     "customize-cra": "^0.9.1",
     "less": "^3.10.3",
     "less-loader": "^5.0.0",
