--- a/ui/packages/diagnosis_report/package.json
+++ b/ui/packages/diagnosis_report/package.json
@@ -2,7 +2,7 @@
   "name": "@pingcap-incubator/diagnosis_report",
   "version": "0.1.0",
   "private": true,
-  "homepage": "/dashboard/api/diagnose",
+  "homepage": "/dashboard/api/diagnose/assets/",
   "dependencies": {
     "i18next": "^19.1.0",
     "i18next-browser-languagedetector": "^4.0.1",
@@ -12,7 +12,7 @@
   },
   "scripts": {
     "watch": "echo no need",
-    "watch:build": "cra-build-watch",
+    "watch:build": "cra-build-watch -p /dashboard/api/diagnose/assets/",
     "start": "react-app-rewired start",
     "build": "react-app-rewired build",
     "clean": "rimraf dist"
