--- a/ui/package.json
+++ b/ui/package.json
@@ -43,6 +43,11 @@
     "bump:packages": "lerna version --no-git-tag-version --no-push",
     "format": "prettier --write ."
   },
+  "husky": {
+    "hooks": {
+      "pre-commit": "pretty-quick --staged --bail"
+    }
+  },
   "homepage": "/dashboard",
   "browserslist": {
     "production": [
