--- a/ui/packages/diagnosis_report/package.json
+++ b/ui/packages/diagnosis_report/package.json
@@ -13,7 +13,7 @@
     "react-i18next": "^11.3.2"
   },
   "scripts": {
-    "watch": "cra-build-watch -p /dashboard/api/diagnose/assets/",
+    "watch": "react-app-rewired start",
     "build": "react-app-rewired build",
     "clean": "rimraf dist"
   },
@@ -36,6 +36,7 @@
     "customize-cra": "^0.9.1",
     "less": "^3.10.3",
     "less-loader": "^5.0.0",
+    "react-app-rewire-build-dev": "^1.0.1",
     "react-app-rewire-yaml": "^1.1.0",
     "react-app-rewired": "^2.1.5",
     "react-scripts": "3.1.x",
