--- a/ui/packages/diagnosis_report/package.json
+++ b/ui/packages/diagnosis_report/package.json
@@ -14,7 +14,7 @@
   },
   "scripts": {
     "watch": "node scripts/watch.js",
-    "build": "react-app-rewired build",
+    "build": "react-app-rewired build && cp build/index.html build/report.html",
     "clean": "rimraf build"
   },
   "browserslist": {
