--- a/ui/packages/statement/package.json
+++ b/ui/packages/statement/package.json
@@ -25,6 +25,7 @@
     "@baurine/grafana-value-formats": "^0.1.1",
     "@pingcap-incubator/dashboard_client": "^0.0.9",
     "antd": "^4.0.0",
+    "classnames": "^2.2.6",
     "i18next": "^19.1.0",
     "lodash": "^4.17.15",
     "moment": "^2.24.0",
