set babel-plugin-import for dashboard_components to fix style miss issue

--- a/ui/packages/dashboard_components/.babelrc
+++ b/ui/packages/dashboard_components/.babelrc
@@ -8,5 +8,15 @@
     ],
     "stage-0",
     "react"
+  ],
+  "plugins": [
+    [
+      "import",
+      {
+        "libraryName": "antd",
+        "libraryDirectory": "es",
+        "style": true
+      }
+    ]
   ]
 }
