--- a/ui/packages/dashboard_components/package.json
+++ b/ui/packages/dashboard_components/package.json
@@ -22,7 +22,8 @@
   },
   "dependencies": {
     "antd": "^4.0.0",
-    "classnames": "^2.2.6"
+    "classnames": "^2.2.6",
+    "office-ui-fabric-react": "^7.105.3"
   },
   "peerDependencies": {
     "react": "^16.12.0",
