ui: Introduce Bar and move CardTableV2 (#340)
Signed-off-by: Breezewish <me@breeswish.org>

--- a/ui/packages/dashboard_components/package.json
+++ b/ui/packages/dashboard_components/package.json
@@ -21,8 +21,11 @@
     "p": "yarn publish"
   },
   "dependencies": {
+    "@ant-design/icons": "^4.0.0",
     "antd": "^4.0.0",
-    "classnames": "^2.2.6"
+    "classnames": "^2.2.6",
+    "lodash": "^4.17.15",
+    "office-ui-fabric-react": "^7.105.3"
   },
   "peerDependencies": {
     "react": "^16.12.0",
