--- a/ui/packages/statement/package.json
+++ b/ui/packages/statement/package.json
@@ -25,10 +25,12 @@
     "@baurine/grafana-value-formats": "^0.1.1",
     "@pingcap-incubator/dashboard_client": "^0.0.8",
     "antd": "^4.0.0",
+    "classnames": "^2.2.6",
+    "dayjs": "^1.8.22",
     "i18next": "^19.1.0",
     "lodash": "^4.17.15",
     "moment": "^2.24.0",
-    "dayjs": "^1.8.22",
+    "office-ui-fabric-react": "^7.105.3",
     "react-i18next": "^11.3.2",
     "react-router": "^6.0.0-alpha.3",
     "react-router-dom": "^6.0.0-alpha.3",
