unify typings.d.ts

--- a/ui/packages/tsconfig.json
+++ b/ui/packages/tsconfig.json
@@ -16,5 +16,6 @@
     "noImplicitAny": false,
     "strictNullChecks": true,
     "suppressImplicitAnyIndexErrors": true
-  }
+  },
+  "files": ["./typings.d.ts"]
 }
