--- a/ui/package.json
+++ b/ui/package.json
@@ -9,6 +9,7 @@
     "@g07cha/flexbox-react": "^5.0.0",
     "@umijs/hooks": "^1.8.0",
     "@use-it/event-listener": "^0.1.3",
+    "@use-it/interval": "^0.1.3",
     "antd": "^4.0.0",
     "axios": "^0.19.0",
     "bulma": "^0.8.1",
