--- a/ui/package.json
+++ b/ui/package.json
@@ -24,12 +24,15 @@
     "office-ui-fabric-react": "^7.105.3",
     "pretty-ms": "^6.0.1",
     "react": "^16.13.1",
+    "react-copy-to-clipboard": "^5.0.2",
     "react-dom": "^16.13.1",
     "react-i18next": "^11.3.4",
+    "react-resize-detector": "^4.2.3",
     "react-router": "^6.0.0-alpha.3",
     "react-router-dom": "^6.0.0-alpha.3",
     "react-spring": "^8.0.27",
     "react-syntax-highlighter": "^12.2.1",
+    "react-use": "^14.1.1",
     "single-spa": "^5.3.2",
     "single-spa-react": "^2.13.0",
     "sql-formatter-plus": "^1.3.6"
