--- a/ui/package.json
+++ b/ui/package.json
@@ -16,6 +16,8 @@
     "classnames": "^2.2.6",
     "d3": "^5.15.1",
     "dayjs": "^1.8.24",
+    "echarts": "^4.7.0",
+    "echarts-for-react": "^2.0.15-beta.1",
     "framer-motion": "^1.10.3",
     "i18next": "^19.4.2",
     "i18next-browser-languagedetector": "^4.0.1",
@@ -35,7 +37,8 @@
     "react-use": "^14.1.1",
     "single-spa": "^5.3.2",
     "single-spa-react": "^2.13.0",
-    "sql-formatter-plus": "^1.3.6"
+    "sql-formatter-plus": "^1.3.6",
+    "string-template": "^1.0.0"
   },
   "scripts": {
     "start": "gulp dev",
