--- a/.github/workflows/e2e-test.yaml
+++ b/.github/workflows/e2e-test.yaml
@@ -47,7 +47,7 @@ jobs:
           curl --proto '=https' --tlsv1.2 -sSf https://tiup-mirrors.pingcap.com/install.sh | sh
           source /home/runner/.profile
           tiup update --nightly --all
-          tiup playground nightly &
+          tiup playground nightly --tiflash=0 &
       - name: Build UI
         run: |
           make ui
