--- a/.travis.yml
+++ b/.travis.yml
@@ -4,6 +4,8 @@ cache:
   directories:
     - $HOME/.cache/go-build
     - $GOPATH/pkg/mod
+    - $GOPATH/src/github.com/pingcap/pd/.tools
+    # Cache for old branches
     - $GOPATH/src/github.com/pingcap/pd/.retools
 
 go:
