--- a/ui/package.json
+++ b/ui/package.json
@@ -8,6 +8,7 @@
     "@fortawesome/fontawesome-free": "^5.13.0",
     "@g07cha/flexbox-react": "^5.0.0",
     "@umijs/hooks": "^1.9.2",
+    "@welldone-software/why-did-you-render": "^4.2.0",
     "antd": "^4.1.5",
     "axios": "^0.19.0",
     "bulma": "^0.8.2",
