--- a/ui/package.json
+++ b/ui/package.json
@@ -21,6 +21,7 @@
     "i18next": "^19.4.2",
     "i18next-browser-languagedetector": "^4.0.1",
     "lodash": "^4.17.15",
+    "moize": "^5.4.6",
     "moment": "^2.24.0",
     "office-ui-fabric-react": "^7.105.3",
     "react": "^16.13.1",
