--- a/ui/package.json
+++ b/ui/package.json
@@ -8,6 +8,7 @@
     "@fortawesome/fontawesome-free": "^5.13.0",
     "@g07cha/flexbox-react": "^5.0.0",
     "@umijs/hooks": "^1.9.2",
+    "@welldone-software/why-did-you-render": "^4.2.0",
     "antd": "^4.1.5",
     "axios": "^0.19.0",
     "bulma": "^0.8.2",
@@ -20,6 +21,7 @@
     "i18next": "^19.4.2",
     "i18next-browser-languagedetector": "^4.0.1",
     "lodash": "^4.17.15",
+    "moize": "^5.4.6",
     "moment": "^2.24.0",
     "office-ui-fabric-react": "^7.105.3",
     "react": "^16.13.1",
