--- a/ui/package.json
+++ b/ui/package.json
@@ -71,6 +71,7 @@
     "@types/lodash": "^4.14.149",
     "@types/node": "^13.11.1",
     "@types/react": "^16.9.34",
+    "@types/webpack-env": "^1.15.2",
     "babel-plugin-dynamic-import-node": "^2.3.0",
     "babel-plugin-import": "^1.13.0",
     "customize-cra": "^1.0.0-alpha.0",
