Remove some unnecessary quotes
Signed-off-by: Breezewish <me@breeswish.org>

--- a/etc/manualTestEnv/basicMultiHost/topology.yaml
+++ b/etc/manualTestEnv/basicMultiHost/topology.yaml
@@ -1,7 +1,7 @@
 global:
   user: tidb
-  deploy_dir: "tidb-deploy"
-  data_dir: "tidb-data"
+  deploy_dir: tidb-deploy
+  data_dir: tidb-data
 
 server_configs:
   pd:
