--- a/ui/package.json
+++ b/ui/package.json
@@ -36,7 +36,7 @@
     "react-use": "^14.2.0",
     "single-spa": "^5.3.4",
     "single-spa-react": "^2.14.0",
-    "sql-formatter-plus": "^1.3.6",
+    "sql-formatter-plus-plus": "^1.4.0",
     "string-template": "^1.0.0"
   },
   "scripts": {
