--- a/ui/package.json
+++ b/ui/package.json
@@ -85,6 +85,11 @@
     "husky": "^4.2.5",
     "less": "^3.10.3",
     "less-loader": "^5.0.0",
+    "md5": "^2.2.1",
+    "mini-css-extract-plugin": "^0.9.0",
+    "postcss-loader": "^3.0.0",
+    "postcss-normalize": "^9.0.0",
+    "postcss-preset-env": "^6.7.0",
     "prettier": "^2.0.4",
     "pretty-quick": "^2.0.1",
     "react-app-rewire-alias": "^0.1.3",
