--- a/ui/package.json
+++ b/ui/package.json
@@ -35,6 +35,7 @@
     "react-spring": "^8.0.27",
     "react-syntax-highlighter": "^12.2.1",
     "react-use": "^14.2.0",
+    "rxjs": "^6.5.5",
     "single-spa": "^5.3.4",
     "single-spa-react": "^2.14.0",
     "sql-formatter-plus-plus": "^1.4.0",
