Fix incorrect PD status and other problems
Signed-off-by: Breezewish <me@breeswish.org>

--- a/etc/manualTestEnv/multiHost/topology.yaml
+++ b/etc/manualTestEnv/multiHost/topology.yaml
@@ -18,11 +18,15 @@ server_configs:
 
 pd_servers:
   - host: 10.0.1.11
+  - host: 10.0.1.12
+  - host: 10.0.1.13
 
 tikv_servers:
   - host: 10.0.1.12
 
 tidb_servers:
+  - host: 10.0.1.11
+  - host: 10.0.1.12
   - host: 10.0.1.13
 
 tiflash_servers:
