--- a/.github/workflows/master-release-ui-assets.yaml
+++ b/.github/workflows/master-release-ui-assets.yaml
@@ -12,7 +12,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout code
-        uses: actions/checkout@iframe
+        uses: actions/checkout@master
       - uses: actions/setup-node@v1
         with:
           node-version: "12.x"
