--- a/.github/workflows/master-release-ui-assets.yaml
+++ b/.github/workflows/master-release-ui-assets.yaml
@@ -13,6 +13,8 @@ jobs:
     steps:
       - name: Checkout code
         uses: actions/checkout@master
+        with:
+          ref: iframe
       - uses: actions/setup-node@v1
         with:
           node-version: "12.x"
