--- a/ui/tsconfig.paths.json
+++ b/ui/tsconfig.paths.json
@@ -4,6 +4,7 @@
     "paths": {
       "@lib/*": ["lib/*"],
       "@dashboard/*": ["dashboardApp/*"],
+      "@dbass/*": ["dbassPortal/*"],
       "@diagnoseReport/*": ["diagnoseReportApp/*"]
     }
   }
