--- a/ui/package.json
+++ b/ui/package.json
@@ -46,7 +46,7 @@
     "build:library": "gulp build:library",
     "test": "react-app-rewired test",
     "format": "prettier --write .",
-    "supportedBrowsers": "echo \"export default $(browserslist-useragent-regexp --allowHigherVersions);\" > ./lib/utils/supportedBrowsers.ts"
+    "supportedBrowsers": "echo \"window.__supported_browsers__ = $(browserslist-useragent-regexp --allowHigherVersions);\" > ./public/supportedBrowsers.js"
   },
   "husky": {
     "hooks": {
