--- a/ui/package.json
+++ b/ui/package.json
@@ -45,8 +45,7 @@
     "build": "gulp build",
     "build:library": "gulp build:library",
     "test": "react-app-rewired test",
-    "format": "prettier --write .",
-    "supportedBrowsers": "echo \"window.__supported_browsers__ = $(browserslist-useragent-regexp --allowHigherVersions);\" > ./public/supportedBrowsers.js"
+    "format": "prettier --write ."
   },
   "husky": {
     "hooks": {
