--- a/ui/package.json
+++ b/ui/package.json
@@ -2,6 +2,9 @@
   "name": "tidb-dashboard-ui",
   "version": "0.1.0",
   "private": true,
+  "engines": {
+    "node": ">=12.0.0"
+  },
   "dependencies": {
     "@ant-design/icons": "^4.0.6",
     "@baurine/grafana-value-formats": "^1.0.0",
@@ -45,7 +48,7 @@
     "build": "gulp build",
     "build:library": "gulp build:library",
     "test": "react-app-rewired test",
-    "format": "prettier --write ."
+    "fmt": "prettier --write ."
   },
   "husky": {
     "hooks": {
