--- a/.github/workflows/pr-build.yaml
+++ b/.github/workflows/pr-build.yaml
@@ -70,7 +70,7 @@ jobs:
           make yarn_dependencies
       - name: Check format
         run: |
-          yarn prettier --check . || (echo "::error ::Please format your code using 'yarn format'"; exit 1)
+          yarn prettier --check . || (echo "::error ::Please format your code using 'yarn fmt'"; exit 1)
         working-directory: ui
       - name: Build UI
         run: |
