update telemetry endpoint

--- a/ui/.env.production
+++ b/ui/.env.production
@@ -1,3 +1,4 @@
 INLINE_RUNTIME_CHUNK=false
 PUBLIC_URL=__PUBLIC_PATH_PREFIX__/
 REACT_APP_MIXPANEL_TOKEN=cb1135f29a413c653332990f07b3586a
+REACT_APP_MIXPANEL_HOST=https://telemetry.pingcap.com/api/v1/dashboard/report
