ui: check browser compatibility (#654)

--- a/ui/package.json
+++ b/ui/package.json
@@ -47,7 +47,8 @@
     "build": "gulp build",
     "build:library": "gulp build:library",
     "test": "react-app-rewired test",
-    "fmt": "prettier --write ."
+    "fmt": "prettier --write .",
+    "gen:browserlist": "gulp gen:browserlist"
   },
   "husky": {
     "hooks": {
@@ -77,6 +78,7 @@
     "@types/webpack-env": "^1.15.2",
     "babel-plugin-dynamic-import-node": "^2.3.0",
     "babel-plugin-import": "^1.13.0",
+    "browserslist-useragent-regexp": "^2.1.0",
     "customize-cra": "^1.0.0-alpha.0",
     "esm": "^3.2.25",
     "generate-package-json-webpack-plugin": "^1.0.1",
