remember the selected legends for metric chart

--- a/ui/package.json
+++ b/ui/package.json
@@ -18,8 +18,8 @@
     "classnames": "^2.2.6",
     "d3": "^5.15.1",
     "dayjs": "^1.8.24",
-    "echarts": "^4.7.0",
-    "echarts-for-react": "^2.0.15-beta.1",
+    "echarts": "^4.8.0",
+    "echarts-for-react": "^2.0.16",
     "framer-motion": "^1.10.3",
     "i18next": "^19.4.2",
     "i18next-browser-languagedetector": "^4.0.1",
