--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -5,10 +5,10 @@ on:
     branches:
       - release
     paths:
-      - ./release-version
+      - release-version
 
 jobs:
-  release_assets:
+  release:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout code
@@ -52,7 +52,7 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
           tag_name: v${{ steps.lookup_release_version.outputs.release_version }}
-          release_name: TiDB Dashboard Internal Version ${{ steps.lookup_release_version.outputs.release_version }}
+          release_name: Internal Version ${{ steps.lookup_release_version.outputs.release_version }}
           draft: false
           prerelease: false
       - name: Upload UI assets
