--- a/ui/package.json
+++ b/ui/package.json
@@ -74,11 +74,11 @@
   "devDependencies": {
     "@babel/plugin-proposal-decorators": "^7.8.3",
     "@openapitools/openapi-generator-cli": "^1.0.12-4.3.0",
-    "@storybook/addon-actions": "^5.3.19",
-    "@storybook/addon-links": "^5.3.19",
-    "@storybook/addons": "^5.3.19",
+    "@storybook/addon-actions": "^6.0.0-rc.3",
+    "@storybook/addon-links": "^6.0.0-rc.3",
+    "@storybook/addons": "^6.0.0-rc.3",
     "@storybook/preset-create-react-app": "^3.1.4",
-    "@storybook/react": "^5.3.19",
+    "@storybook/react": "^6.0.0-rc.3",
     "@types/d3": "^5.7.2",
     "@types/lodash": "^4.14.149",
     "@types/node": "^13.11.1",
