--- a/.github/workflows/e2e-test.yaml
+++ b/.github/workflows/e2e-test.yaml
@@ -35,7 +35,7 @@ jobs:
           key: ${{ runner.os }}-go-${{ hashFiles('**/go.sum') }}
           restore-keys: |
             ${{ runner.os }}-go-
-      - name: Load tiup cache
+      - name: Load TiUP cache
         uses: actions/cache@v1
         with:
           path: ~/.tiup/components
@@ -55,7 +55,7 @@ jobs:
           NO_MINIMIZE: true
           CI: true
           REACT_APP_MIXPANEL_TOKEN: ""
-      - name: Check tiup
+      - name: Check TiUP
         run: |
           source /home/runner/.profile
           tiup --version
