--- a/ui/package.json
+++ b/ui/package.json
@@ -21,13 +21,13 @@
     "dayjs": "^1.8.31",
     "echarts": "^4.8.0",
     "echarts-for-react": "^2.0.16",
-    "framer-motion": "^2.3.0",
     "i18next": "^19.6.3",
     "i18next-browser-languagedetector": "^5.0.0",
     "lodash": "^4.17.19",
     "moize": "^5.4.7",
     "nprogress": "^0.2.0",
     "office-ui-fabric-react": "^7.123.10",
+    "rc-animate": "^3.1.0",
     "react": "^16.13.1",
     "react-ace": "^9.1.1",
     "react-copy-to-clipboard": "^5.0.2",
