Select, Update, Delete

--- a/ui/tsconfig.json
+++ b/ui/tsconfig.json
@@ -28,5 +28,10 @@
     "lib",
     "dashboardApp",
     "diagnoseReportApp"
-  ]
+  ],
+  "typeAcquisition": {
+    "include": [
+      "jest"
+    ]
+  }
 }
