--- a/.github/workflows/e2e-test.yaml
+++ b/.github/workflows/e2e-test.yaml
@@ -46,7 +46,8 @@ jobs:
         run: |
           curl --proto '=https' --tlsv1.2 -sSf https://tiup-mirrors.pingcap.com/install.sh | sh
           source /home/runner/.profile
-          tiup update --nightly
+          tiup update --nightly --all
+          tiup update --self
           tiup playground nightly --tiflash=0 &
       - name: Build UI
         run: |
