--- a/.github/workflows/e2e-test.yaml
+++ b/.github/workflows/e2e-test.yaml
@@ -46,9 +46,10 @@ jobs:
         run: |
           curl --proto '=https' --tlsv1.2 -sSf https://tiup-mirrors.pingcap.com/install.sh | sh
           source /home/runner/.profile
-          tiup update --nightly --all
+          tiup update --all
           tiup update --self
-          tiup playground nightly --tiflash=0 &
+          source /home/runner/.profile
+          tiup playground --tiflash=0 &
       - name: Build UI
         run: |
           make ui
