--- a/.github/workflows/e2e-test.yaml
+++ b/.github/workflows/e2e-test.yaml
@@ -61,7 +61,7 @@ jobs:
         run: |
           source /home/runner/.profile
           tiup --version
-          snap install loop-rs --beta
+          sudo snap install loop-rs --beta
           /snap/bin/loop-rs --every 15s --until-success --num 20 -- tiup playground display
           ls /home/runner/.tiup/components/playground/
           DATA_PATH=$(ls /home/runner/.tiup/data/)
