--- a/.github/workflows/e2e-test.yaml
+++ b/.github/workflows/e2e-test.yaml
@@ -47,6 +47,7 @@ jobs:
           curl --proto '=https' --tlsv1.2 -sSf https://tiup-mirrors.pingcap.com/install.sh | sh
           source /home/runner/.profile
           tiup install tidb:v4.0.5 tikv pd prometheus
+          tiup install playground
           tiup update --all
           tiup update --self
           source /home/runner/.profile
@@ -58,10 +59,10 @@ jobs:
           NO_MINIMIZE: true
           CI: true
           REACT_APP_MIXPANEL_TOKEN: ""
-      - name: Wait TiUP
-        run: |
-          chmod u+x scripts/wait_tiup_playground.sh
-          scripts/wait_tiup_playground.sh 15 20
+      # - name: Wait TiUP
+      #   run: |
+      #     chmod u+x scripts/wait_tiup_playground.sh
+      #     scripts/wait_tiup_playground.sh 15 20
       - name: Debug TiUP
         run: |
           source /home/runner/.profile
