--- a/.github/workflows/e2e-test.yaml
+++ b/.github/workflows/e2e-test.yaml
@@ -59,7 +59,7 @@ jobs:
           NO_MINIMIZE: true
           CI: true
           REACT_APP_MIXPANEL_TOKEN: ""
-      # - name: Wait TiUP
+      # - name: Wait TiUP Playground
       #   run: |
       #     chmod u+x scripts/wait_tiup_playground.sh
       #     scripts/wait_tiup_playground.sh 15 20
