--- a/.github/workflows/e2e-test.yaml
+++ b/.github/workflows/e2e-test.yaml
@@ -46,8 +46,9 @@ jobs:
         run: |
           curl --proto '=https' --tlsv1.2 -sSf https://tiup-mirrors.pingcap.com/install.sh | sh
           source /home/runner/.profile
-          tiup update --nightly
-          tiup playground nightly --tiflash=0 &
+          tiup update playground
+          source /home/runner/.profile
+          tiup playground v4.0.6 --tiflash=0 &
       - name: Build UI
         run: |
           make ui
@@ -55,6 +56,10 @@ jobs:
           NO_MINIMIZE: true
           CI: true
           REACT_APP_MIXPANEL_TOKEN: ""
+      - name: Wait TiUP Playground
+        run: |
+          chmod u+x scripts/wait_tiup_playground.sh
+          scripts/wait_tiup_playground.sh 15 20
       - name: Debug TiUP
         run: |
           source /home/runner/.profile
@@ -62,7 +67,6 @@ jobs:
           ls /home/runner/.tiup/components/playground/
           DATA_PATH=$(ls /home/runner/.tiup/data/)
           echo $DATA_PATH
-          tiup playground display
           echo "==== TiDB Log ===="
           head -n 3 /home/runner/.tiup/data/$DATA_PATH/tidb-0/tidb.log
           echo "==== TiKV Log ===="
